# ChangeLog for app-emulation/spice-protocol
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.39 2013/12/31 17:10:31 tomwij Exp $

  31 Dec 2013; Tom Wijsman <TomWij@gentoo.org>
  -files/2ffbca210033be262fc75e6a73742e0f0e6d5242.patch:
  [QA] Remove unused files.

*spice-protocol-0.12.6 (03 Jul 2013)

  03 Jul 2013; Tiziano Müller <dev-zero@gentoo.org>
  +spice-protocol-0.12.6.ebuild:
  Version bump.

  04 Jun 2013; Doug Goldstein <cardoe@gentoo.org> -spice-protocol-0.12.2.ebuild:
  Remove older version

*spice-protocol-0.12.5 (03 Jun 2013)

  03 Jun 2013; Doug Goldstein <cardoe@gentoo.org> +spice-protocol-0.12.5.ebuild:
  Version bump. Add some VD Agent types and other minor updates.

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.3.ebuild:
  Stable for x86, wrt bug #459746

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.3.ebuild:
  Stable for amd64, wrt bug #459746

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~arm, wrt bug #449220

*spice-protocol-0.12.3 (12 Jan 2013)

  12 Jan 2013; Doug Goldstein <cardoe@gentoo.org> +spice-protocol-0.12.3.ebuild:
  Version bump

  12 Jan 2013; Doug Goldstein <cardoe@gentoo.org> -spice-protocol-0.10.0.ebuild,
  -spice-protocol-0.10.1.ebuild, -spice-protocol-0.10.3.ebuild:
  Remove older versions

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> spice-protocol-0.12.2.ebuild:
  Add ~ppc, wrt bug #449220
