@@ -4,19 +4,29 @@ Hash: SHA256
 DIST spice-protocol-0.12.3.tar.bz2 69854 SHA256 dc8609efe23e6f9b78d56663aa9ca5e8cb10c2b8403b8fc02aa72ae7686cc037 SHA512 55423743cf195459125305c726803db491ebf16a5ef0cb821eed7e0d71ace9d581b9a6a60c11a03d6a17c0ecc31e2b4c649ed117857a050f409844686b7df3e0 WHIRLPOOL 308ced9222f8b43e2455733fc5d311912bc9d10fbf830d8d4eecd0e86bfd6dc6a0ae15c3d94dc5c3d73aa9635247023259642c570e31557e0ba9caf4bd2c7eb6
 DIST spice-protocol-0.12.5.tar.bz2 70068 SHA256 feacb14940cdcc10214ec8cdc2198d880e54eb206e6d65a9bddf8360b27f7bf9 SHA512 04c48a88b9ab3c094f44400bbcf8be7b2f32c8a38350e38237108a366b2b0d94cf4244b83de749b1bce5fc6f71c9111d5ae063c9cac43d29074fa1f372450ec6 WHIRLPOOL 1c40deed7a054ed8726628067a0a708cddd500245f278eca30c3b5e25adf4137c70faf0a08bbc3a414a257a3d9b8100d05680c40405ba410ecdad3fb870b4b08
 DIST spice-protocol-0.12.6.tar.bz2 70176 SHA256 9d4745602eb2ab1d1c1ab98b4babf587574870993b4faefe354ac57bb5e8259b SHA512 0c9a1dcc6c0afbfb7350b7003a261b692de4864afc8bd8f33e7a730753f43112977bfa5148e0b5af3231d43d9a057859f34f6dff0c738d9aaea07f70138e1f13 WHIRLPOOL 52331e2ebe3a54e02c1115459580ebe405304c3539f3534527cec9e1f72e606c2c8f6b4acf30fcc5df022489f146a0fb253bfa8849e9894f31fb8b2dc48ef706
+DIST spice-protocol-0.12.7.tar.bz2 71276 SHA256 96c6cb73361816ed19bfd8536f65d4547da35709aa00af1380e650c1174916c2 SHA512 48205ab8daba97f754ae1ac9bbb7071efb2f450c43620839ee70d7577eab2ef696151fcce8f6f5c95b2593c58b6a0d5779e36b6fc0b6d450872ac677ea525800 WHIRLPOOL fc990949806c4a27081f2156ff4c2c3388785f3f68e468b7f2c77852c874789fa391ce85fdbb78b30bbe3cd39b7e0615d7815405e3ced815376481e49202bf78
 EBUILD spice-protocol-0.12.3.ebuild 502 SHA256 5fca85210c25dbb4010107a1fb2ff02505071bc2a2ad26f0d955b8bcf711771b SHA512 ec4825863e408a81947789924cce94b030c2d201bd1114749041db3f4e3efbbb10e551b7db212993a2ff75c94513ce29087020289f453d7d5ee4762d9db57995 WHIRLPOOL a9a97ad6bcd33ab0aa21618d89c2ecc59f1e5a6317bf1a0e2cdedd6a0e373f4a613cdc99c9c1d2f2fd1bb9513a663b28db4b93db40b931aaf44a756fe79d8c58
 EBUILD spice-protocol-0.12.5.ebuild 512 SHA256 2df6f0147a7d1db0dd2b12981136af343b9d90c160c8a5be5070f577617166e4 SHA512 597b40af4c195adb6686d55e8439cee4a4e32a14478cffc73edec99388cced4031c4bb1f15a1541a8120cb71bdbcb740d684c062184edc1ba6a810b819d83201 WHIRLPOOL 8fb7a5a8fb4add39ef0c4117fec05168b8cb8eb219f92f6d00e9d4b8341c93dd7496a524a0258173d33dc4a44765341d1edc400403d920a79cd2601036493716
 EBUILD spice-protocol-0.12.6.ebuild 514 SHA256 faec1f755fcd4c08492bc750f2166fa1b2cc41972b576f6431ddcd33a370e261 SHA512 518415e5f3560add4da064aee654969b4e6846617ed178e0f4f1904afa25439ef296028ff578d2334fd29c3d14f81d3dc93bac5a315b57070e353758460fbd29 WHIRLPOOL ae02d2fa6e7d36380220d8aceebc1ffc533a067933fc8882e470334a55bfd29bc258c711fad763f0e909063076fc98f46b843e2172abc699a105b488628f804a
-MISC ChangeLog 5758 SHA256 30a88c971b6dea49515aae1adf8ce45c4d8defc8de575d7f048f6c77a692ccec SHA512 a9429a9b13733ef1600189a0b276e23f6e75fad9eb3a8c94d1d85d12bd1c79a463ab14c8b7256f166f02fa9f2b8778988583e75f2bbbcd638bf164d3f4a4616d WHIRLPOOL 2d2164c1827d9a8d978a7f212696b5eaeaace0fd3a9811ec5cff0a13eb41d3b43957c985c95f89f655607e4404bb3f213e7d9f8fbe0471d51700350d7ea972a4
+EBUILD spice-protocol-0.12.7.ebuild 514 SHA256 444068270fe5be9e1410c29886a292ed48fe66a8f81aed92f19a8558a770def8 SHA512 4b588991503f3f6e474597abe8c7632bf33adae9813087d65417dfc0743b457118cbb0e8e3965c906b752af395766b16a434975f9f6dd655ce38fd1e173e5862 WHIRLPOOL 4483ab3c6258ef3cbd5005b418807494e530f0124a1c42fc8d82c7b5a81ff713066630ad53b00faece6c222713888fbf16c5e8604e130057841cf50774b063f0
+MISC ChangeLog 5901 SHA256 1e0f112b52fc7dcf1d6ca0c2ebceba69d0ecaba85a702e6c85405e3fba7e0d20 SHA512 7472769414b16349f8e19202b778796687cbc4aa5eb92b5836f43e55b4a19857417b784643591962ad7227e726fbed5704c0043647210ce13a4dcdbbd3c283c2 WHIRLPOOL 19b38640ca7353a9648a287fd78d96c487a612a88a4e2c75a347067d066e74802e91573f595eee1557c9bffd5042e584931301610a8259b49458904c6de752a7
 MISC metadata.xml 272 SHA256 d52be94b62df0e5c6939cfdd12370b98adad2fc8e4b58bdd1f9efbe40bf91753 SHA512 46820644a5d138065112243feab6ab560aa5552074609c5b04c2fb2df2dd3f82f18c7df02963ce5b6933f2f69ca131dae9ee518f6abb153cdf3cbd588d40e683 WHIRLPOOL 17acb32f49c97ff575c9b9df53b2dc733d49b272f7f7c0da86ca3084f6f0e52114f8f4ca72f8116d636be5e46f6d0b5212c909582c434599747c5a49e94ea4db
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSwvpyAAoJEJWyH81tNOV9EL0H/jj13qjaf88skmsp4FJODyv1
-i8PSWFkkBdkDkhLVgUW6CyMe7vWunYTtxvnOtm1TFKCSWy0VqGwXnpRa7mPpPMN8
-fbUm8y09eVn0tcFTIBNHSVhI9gD8QzlhSaVVS1p6NbXst36KUxJHNUyKkm31bAii
-3QrY8det/KDlKw3pshmYCJ7uCGJ5b1HLAkqvpU74GW/IMDB2jXcZink18/7iuggx
-VJ91FFDvcjar8yzYv5PBqOtEMxcHvaz+Pwwiz/zJ2SdXzOWoZ/8tjltknWaYT7sg
-ZDFw3VDqdTHLKVJEwEDc0AAWcAM5wPJNXjXX3rtn8ML4O9tB4m+sMx96cBZRWug=
-=AKzv
+iQJ8BAEBCABmBQJTstLRXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCMjM3NDkyMkQ0OTFBMUIyMzgzNkZBMkUx
+QTVEMDIzOTc1QjA1ODNEAAoJEBpdAjl1sFg9BUwQANE2Yh1p8haHJl1exqdDSRpe
+yXyCK66C4TYKlFEXUCzbewCEdXul3qLcXPt4N++re/JzBBZGYNjEEFVVJjM4Gse1
+SIWnlN7yprtjTa2dTw3+xPWmdZLqTGYYdykiapBrr2nOMRIrSwAoxl/9YM2bp1qm
+hOa5XtAwx4/jOOI3Z499wroFbuTY/m5rHfUKKHhp1WKpbN+iF6ihww7ia3tBdMgH
+TCFTJpQWZm0o19Vd4JFfMm/giMeodplA/Q7jLDMw2yBDuTlRIkH6hnl6sa8JtIOW
+r6YLMdRewYzwG6PsbLDCh33M3AdlErlbylIf/EAtvnujDarl42vvdpJQ/0Nuu/3I
+gaReE3M5jdwx4lpOJCxkPtmyg005n1GKC0d7sbGnOQWGLz13I8H+3vMPGHrgFJ1a
+V7tBM4J5a3wAZLfRSduf/n07yT8C6MT7XHVxkRzys290UKkTNkHO4fcfGlt58RTR
+tfWxpsK8Ju7u/eo8jgVraFspwcrUxLFfkJuLQYj56zsQQqgGFJWZSj1wgHoR0KJq
+A54aaue0KsGJ6MoOOLey5gqhkE3ohtDP9jTfaarq6Wy9qyG5esPZcS8sWjT0LTWj
+YqOxQz3Z1rfINlqIlJtWLng93NYRXJIl3ys1Qy+tteI6v8RM2nK8Hl9OrVyawgEi
+BYZ5iBfqBYBWT+/P7gtu
+=T2nv
 -----END PGP SIGNATURE-----
