@@ -1,0 +1,9 @@
+DEFINED_PHASES=-
+DESCRIPTION=Headers defining the SPICE protocol.
+EAPI=5
+HOMEPAGE=http://spice-space.org/
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=BSD
+SLOT=0
+SRC_URI=http://spice-space.org/download/releases/spice-protocol-0.12.7.tar.bz2
+_md5_=0112c3ba1966711720b1f062c3797efb
